ignore readme in prerelease

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,11 @@
-name: Release-Test
+name: Release
 
 on:
   push:
     branches:
       - master # creates a pre-release
+    paths-ignore:
+      - README.md
   release:
     types:
       - released # does not include pre-release
