--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,6 +76,8 @@ jobs:
             GOOS: "linux"
           - GOARCH: "amd64"
             GOOS: "darwin"
+          - GOARCH: "arm64"
+            GOOS: "darwin"
           - GOARCH: "amd64"
             GOOS: "windows"
     env:
